--- a/index.html
+++ b/index.html
@@ -181,7 +181,14 @@ let text = `كل عام وانتي بخير وبصحه وسلامه والعمر
 وتعرفي في انسان يحبش ويحاول يستغل مواهبه وجهده وعمله لصالحش 🤍
 
 كل عام وانتي بخير وبصحه وسلامه ياعمري،
-والعمر كله يارب يا سنيني 🖤`;
+والعمر كله يارب يا سنيني🖤
+  كل عام وانتي بخير وبصحه وسلامه ياعمري،
+والعمر كله يارب يا سنيني 🖤
+
+وإذا عطيتيني عكس الكف…
+بتحصلي هديتش الحين 🖤
+`;
+
 
 let i=0;
 function typeWriter(){
